--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
           <input type="password" name="" required="" />
           <label>password</label>
         </div>
-        <a href="home.html">
+        <a href="index.html">
           <span></span>
           <span></span>
           <span></span>
