--- a/p1.html
+++ b/p1.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="home.html"
+        <a href="index.html"
           ><img src="logo.jpg" alt="" height="70" width="70" />
         </a>
       </div>
