--- a/p3.html
+++ b/p3.html
@@ -28,6 +28,7 @@
     </header>
     <br />
     <br />
+    <div class="img">
     <div class="title">Bali</div>
     <h1>Etymology:</h1>
     <p>
@@ -123,5 +124,6 @@ Address: Jalan Bedugul - Singaraja, Candikuning, Baturiti, Kabupaten Tabanan
     <img src="p3f3.jpg" alt="" height="720" width="1200" />
     <img src="p3f4.jpg" alt="" height="400" width="1200" />
     <img src="p3f5.jpg" alt="" height="400" width="1200" />
+    </div>
   </body>
 </html>
