--- a/p2.html
+++ b/p2.html
@@ -28,6 +28,7 @@
     </header>
     <br />
     <br />
+    <div class="img">
     <div class="title">MALDIVES BEACH</div>
     <h1>Etymology:</h1>
     <p>
@@ -84,5 +85,6 @@
     <img src="p2f2.jpg" alt="" height="720" width="1200" />
     <img src="p2f3.jpg" alt="" height="720" width="1200" />
     <img src="p2f4.jpg" alt="" height="400" width="1200" />
+    </div>
   </body>
 </html>
