--- a/p1.html
+++ b/p1.html
@@ -28,6 +28,7 @@
     </header>
     <br />
     <br />
+    <div class="img">
     <div class="title">MANSAROVAR</div>
     <h1>Etymology:</h1>
     <p>
@@ -65,5 +66,6 @@
     <img src="p1f2.jpg" alt="" height="720" width="1200" />
     <img src="p1f3.jpg" alt="" height="720" width="1200" />
     <img src="p1f4.jpg" alt="" height="400" width="1200" />
+      </img>
   </body>
 </html>
